# docs/swagger.json
@@ -30,9 +30,7 @@
   "paths": {
     "/contacts": {
       "get": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Get list of contacts",
         "operationId": "getContacts",
         "description": "Get list of contacts",
@@ -72,10 +70,7 @@
             "name": "sortOrder",
             "schema": {
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ],
+              "enum": ["asc", "desc"],
               "example": "asc"
             }
           },
@@ -84,26 +79,19 @@
             "name": "contactType",
             "schema": {
               "type": "string",
-              "enum": [
-                "work",
-                "home",
-                "personal"
-              ],
+              "enum": ["work", "home", "personal"],
               "example": "personal",
               "description": "filter by contactType value"
             }
           },
           {
             "in": "query",
-            "name": "isFavourite",
+            "name": "isFavorite",
             "schema": {
               "type": "string",
-              "enum": [
-                "true",
-                "false"
-              ],
+              "enum": ["true", "false"],
               "example": "true",
-              "description": "filter favourite contacts"
+              "description": "filter favorite contacts"
             }
           }
         ],
@@ -114,11 +102,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -186,9 +170,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Create contact",
         "operationId": "createContact",
         "description": "Create contact",
@@ -202,11 +184,7 @@
             "multipart/form-data": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "name",
-                  "phoneNumber",
-                  "contactType"
-                ],
+                "required": ["name", "phoneNumber", "contactType"],
                 "properties": {
                   "name": {
                     "description": "Contact's name",
@@ -223,8 +201,8 @@
                     "type": "string",
                     "example": "john_doe@mail.com"
                   },
-                  "isFavourite": {
-                    "description": "Favourite contact",
+                  "isFavorite": {
+                    "description": "Favorite contact",
                     "type": "boolean",
                     "example": true,
                     "default": false
@@ -232,11 +210,7 @@
                   "contactType": {
                     "description": "Type of contact",
                     "type": "string",
-                    "enum": [
-                      "work",
-                      "home",
-                      "personal"
-                    ]
+                    "enum": ["work", "home", "personal"]
                   },
                   "photo": {
                     "description": "Link to contact's photo",
@@ -255,11 +229,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -283,11 +253,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -299,10 +265,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": [
-                        "message",
-                        "errors"
-                      ],
+                      "required": ["message", "errors"],
                       "properties": {
                         "message": {
                           "type": "string",
@@ -312,12 +275,7 @@
                           "type": "array",
                           "items": {
                             "type": "object",
-                            "required": [
-                              "message",
-                              "path",
-                              "type",
-                              "context"
-                            ],
+                            "required": ["message", "path", "type", "context"],
                             "properties": {
                               "message": {
                                 "type": "string",
@@ -328,9 +286,7 @@
                                 "items": {
                                   "type": "string"
                                 },
-                                "example": [
-                                  "phoneNumber"
-                                ]
+                                "example": ["phoneNumber"]
                               },
                               "type": {
                                 "type": "string",
@@ -338,10 +294,7 @@
                               },
                               "context": {
                                 "type": "object",
-                                "required": [
-                                  "label",
-                                  "key"
-                                ],
+                                "required": ["label", "key"],
                                 "properties": {
                                   "label": {
                                     "type": "string",
@@ -374,9 +327,7 @@
     },
     "/contacts/{contactId}": {
       "get": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Get contact by id",
         "operationId": "getContact",
         "description": "Get contact by id",
@@ -403,11 +354,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -438,9 +385,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Patch contact",
         "operationId": "patchContact",
         "description": "Patch contact",
@@ -481,19 +426,15 @@
                     "type": "string",
                     "example": "john_doe@mail.com"
                   },
-                  "isFavourite": {
-                    "description": "Favourite contact",
+                  "isFavorite": {
+                    "description": "Favorite contact",
                     "type": "boolean",
                     "example": true
                   },
                   "contactType": {
                     "description": "Type of contact",
                     "type": "string",
-                    "enum": [
-                      "work",
-                      "home",
-                      "personal"
-                    ]
+                    "enum": ["work", "home", "personal"]
                   },
                   "photo": {
                     "description": "Link to contact's photo",
@@ -512,11 +453,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -540,11 +477,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -556,10 +489,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": [
-                        "message",
-                        "errors"
-                      ],
+                      "required": ["message", "errors"],
                       "properties": {
                         "message": {
                           "type": "string",
@@ -569,12 +499,7 @@
                           "type": "array",
                           "items": {
                             "type": "object",
-                            "required": [
-                              "message",
-                              "path",
-                              "type",
-                              "context"
-                            ],
+                            "required": ["message", "path", "type", "context"],
                             "properties": {
                               "message": {
                                 "type": "string",
@@ -585,9 +510,7 @@
                                 "items": {
                                   "type": "string"
                                 },
-                                "example": [
-                                  "phoneNumber"
-                                ]
+                                "example": ["phoneNumber"]
                               },
                               "type": {
                                 "type": "string",
@@ -595,10 +518,7 @@
                               },
                               "context": {
                                 "type": "object",
-                                "required": [
-                                  "label",
-                                  "key"
-                                ],
+                                "required": ["label", "key"],
                                 "properties": {
                                   "label": {
                                     "type": "string",
@@ -632,9 +552,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Delete contact by id",
         "operationId": "deleteContact",
         "description": "Delete contact by id",
@@ -661,9 +579,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status"
-                  ],
+                  "required": ["status"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -688,9 +604,7 @@
     },
     "/auth/login": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "Login",
         "operationId": "loginUser",
         "description": "Authenticate user and return access token",
@@ -700,10 +614,7 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "email",
-                  "password"
-                ],
+                "required": ["email", "password"],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -725,11 +636,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "token"
-                  ],
+                  "required": ["status", "message", "token"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -768,13 +675,7 @@
     "schemas": {
       "contact": {
         "type": "object",
-        "required": [
-          "_id",
-          "name",
-          "phoneNumber",
-          "contactType",
-          "userId"
-        ],
+        "required": ["_id", "name", "phoneNumber", "contactType", "userId"],
         "properties": {
           "_id": {
             "type": "string",
@@ -792,17 +693,13 @@
             "type": "string",
             "example": "john_doe@mail.com"
           },
-          "isFavourite": {
+          "isFavorite": {
             "type": "boolean",
             "example": true
           },
           "contactType": {
             "type": "string",
-            "enum": [
-              "work",
-              "home",
-              "personal"
-            ]
+            "enum": ["work", "home", "personal"]
           },
           "userId": {
             "type": "string",
@@ -822,11 +719,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
+              "required": ["status", "message", "data"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -838,9 +731,7 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": [
-                    "message"
-                  ],
+                  "required": ["message"],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -859,10 +750,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message"
-              ],
+              "required": ["status", "message"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -883,10 +771,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message"
-              ],
+              "required": ["status", "message"],
               "properties": {
                 "status": {
                   "type": "integer",
